[gd_scene load_steps=3 format=2]

[ext_resource path="res://PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Settings.tscn" type="PackedScene" id=2]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.129412, 0.101961, 0.101961, 0.180392 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 447.0
margin_top = 245.0
margin_right = 576.0
margin_bottom = 355.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 129.0
margin_bottom = 14.0
text = "Paused"
align = 1
valign = 1

[node name="Resume" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 129.0
margin_bottom = 38.0
focus_neighbour_top = NodePath("../Exit")
text = "Resume"

[node name="Options" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 129.0
margin_bottom = 62.0
text = "Options"

[node name="ExitToMenu" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 129.0
margin_bottom = 86.0
focus_neighbour_bottom = NodePath("../Resume")
text = "Exit To Main Menu"

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 129.0
margin_bottom = 110.0
focus_neighbour_bottom = NodePath("../Resume")
text = "Exit Game"

[node name="Settings_Menu" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ExitToMenu" to="." method="_on_ExitToMenu_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
